# fcp-slides

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
src/fcp_slides/: __main__.py  adapter.py  main.py
src/fcp_slides/lib/: chart_types.py  colors.py  layout_names.py  shape_types.py  units.py
src/fcp_slides/model/: index.py  refs.py  snapshot.py
src/fcp_slides/server/: ops_charts.py  ops_images.py  ops_layout.py  ops_notes.py  ops_shapes.py  ops_slides.py  ops_style.py  ops_tables.py  ops_text.py  queries.py  reference_card.py  resolvers.py  verb_registry.py
tests/: test_adapter.py  test_colors.py  test_model.py  test_units.py
